# QPFPGA

./: .gitignore  .gitmodules  README.md
QPFPGA/: README.md  setup.py
QPFPGA/bitstreams/: admm_pcg_16384x16384_reshape8_pes20.hwh  admm_pcg_8192x8192_reshape1_pes30.hwh
QPFPGA/cpp/: CMakeLists.txt
QPFPGA/cpp/include/: admm_pcg_params.h  api.h  fpga_params.h  fpga_utils.h  utils.h
QPFPGA/cpp/src/: api.cpp  fpga_utils.cpp  utils.cpp
QPFPGA/examples/: cvxpy_qpfpga_demo.py
QPFPGA/qpfpga/: README.md  __init__.py  backend.py  data.py  solver.py
QPFPGA/tests/: test_plot_lat_energy_nnz.py
admm/: Makefile  README.md
admm/DSE/: README.md  dse_results_csynth_only.csv  dse_results_csynth_only.md  generate_1024_bin_densities.py  generate_32768_bin_densities.py  generate_bitstreams.py  run_dse.py
admm/DSE/exp1/: exp1_pe_sweep.ipynb  exp1_pe_sweep_results.csv  plot_bram_vs_latency.py
admm/DSE/exp2/: exp2_reshape_sweep.ipynb  exp2_reshape_sweep_results.csv  plot_bram_vs_latency.py
admm/DSE/exp3/: exp3_size_numpes_sweep.ipynb  exp3_tile_size_sweep_results.csv  legend_offsets.json  pareto_label_offsets_by_density.json  plot_bar_chart_utilization_pareto.py  plot_bar_tmp.py  plot_bram_vs_latency.py  test.py
admm/HLS/: README.md
admm/jupyter/: Makefile  admm.ipynb  admm_cvxpygen_data.ipynb  admm_cvxpygen_data_tile.ipynb  admm_test.c  admm_test_1024.c
admm/reports/: admm_cosim.rpt  admm_csynth.rpt
admm/scripts/: admm_HLS.tcl  admm_HLS_cosim.tcl  admm_HLS_csynth.tcl  admm_HLS_export.tcl  admm_HLS_sim.tcl  admm_Vivado.tcl  admm_Vivado_impl.tcl
(+100 files in other folders)
